style_sec2.css
.second {
    background: #040904;
}

.second__img {
    position: absolute;
    right: 0;
    width: auto;
    height: 100vh;
}

.second__img--mobile {
    position: relative;
    top: 0;
    width: 100%;
    height: auto;
}

.second__paragraph {
    position: absolute;
    top: 130%;
    left: 6%;
    width: 32.5%;
    color: #F8E8F7;
    text-align: justify;
    line-height: 2.3vh;
    font-size: 0.85vw;
}

.second__subtitle {
    position: absolute;
    left: 8vw;
    bottom: 14vh;
    color: #F8E8F7;
    font-size: 8vw;
    font-weight: lighter;
    letter-spacing: -4px;
    white-space: nowrap;
}

.second__blur {
    background: rgba(0, 0, 0, 0.2);
    border-radius: 5px;
}

.second__paragraph--bottom {
    position: absolute;
    top: 125%;
}

.second--mobile {
    display: none;
    position: relative;
    background: #040904;
    height: 130vh;
    width: 100%;
    max-width: 100vw;
    overflow: hidden;
}

.second__paragraph--mobile {
    position: absolute;
    bottom: 30vh;
    color: #F8E8F7;
    text-align: justify;
    font-size: 2.8vw;
    padding-left: 3%;
    padding-right: 3%;
    line-height: 2.3vh;
}

.second__subtitle--mobile {
    position: absolute;
    left: 2vw;
    top: -18vh;
    color: #F8E8F7;
    font-size: 17vw;
    font-weight: lighter;
    letter-spacing: -4px;
}

.second__subtitle--mobileENG {
    position: absolute;
    left: 3.5vw;
    top: -13vh;
    color: #F8E8F7;
    font-size: 11vw;
    font-weight: lighter;
    white-space: nowrap;
}

.second__paragraph--bottom--mobile {
    position: absolute;
    top: 110%;
    padding-right: 3%;
}


/* for tablets */
@media (max-aspect-ratio: 1/1) {
    .second {
        display: none;
    }

    .second--mobile {
        display: block;
    }
}

/* for smartphones */
@media (max-aspect-ratio: 320/560) {
    .second--mobile {
        position: relative;
        background: #040904;
        height: 110vh;
        width: 100%;
        max-width: 100vw;
        overflow: hidden;
    }

    .second__paragraph--mobile {
        position: absolute;
        bottom: 30vh;
        color: #F8E8F7;
        text-align: justify;
        font-size: 3.2vw;
        padding-left: 3%;
        padding-right: 3%;
        line-height: 2.3vh;
    }

    .second__subtitle--mobile {
        position: absolute;
        left: 2vw;
        top: -15vh;
        color: #F8E8F7;
        font-size: 17vw;
        font-weight: lighter;
        letter-spacing: -4px;
    }

    .second__paragraph--bottom--mobile {
        position: absolute;
        top: 110%;
        padding-right: 3%;
    }

    .second__subtitle--mobileENG {
        top: -9.5vh;
    }
}

/* for iPhone X */
@media (max-aspect-ratio: 410/812) {
    .second--mobile {
        height: 100vh;
    }

    .second__subtitle--mobile {
        top: -12vh;
    }
    
}

